# AIModelJudge-public

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  LICENSE  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.github/workflows/: penetration-test.yml  security-scan.yml
deploy/: alerting-rules.yml  grafana-dashboard.json  nginx-aimodeljudge.conf  setup-tls.sh
landing/: index.html
scripts/: audit-deps.sh  migrate_profiles.py  model_compare.py  setup.sh  supply-chain-check.sh  zap-scan.sh
services/hermes-local-agent/: audit.py  command_executor.py  config.py  file_ops.py  git_ops.py  install.sh  linter.py  main.py  pyproject.toml  security.py  test_runner.py  ws_client.py
services/shared/: hermes_proxy_v2.py  mcp_client.py  memory_client.py  model_router.py  tool_executor.py
tests/: load_test.py  load_test.sh  regression_test.sh  test_isolation.py  test_model_compare.py  test_profiles.py  visual_test.py
web/: __init__.py  agent_manager.py  agent_ws.py  app_config.py  audit.py  auth.py  benchmarks.py  company_mode.py  company_orchestrator.py  config.py  correlation.py  cost_guard.py  data_layer.py  data_retention.py  hermes_proxy.py  hooks.py  jwt_auth.py  logging_config.py  main.py  metrics.py  migrate_isolation.py  model_cache.py  primary_models.py  prompt_guard.py  rate_limit.py  routes.py  rules.py  sandbox.py  secrets_vault.py  skill_analyzer.py  skills_manager.py  telegram_bot.py  tiers.py  token_store.py  vault_cli.py
web-react/: index.html  package-lock.json  package.json  vite.config.ts
web-react/public/: manifest.json  sw.js
web-react/src/: App.tsx  index.css
web-react/src/components/chat/: ChatContainer.tsx  ChatMessage.tsx  DiffViewer.tsx  FilePopup.tsx  MessageInput.tsx  ThinkingBlock.tsx  ToolCard.tsx
web-react/src/components/company/: SpecialistPanel.tsx  SpecialistSelector.tsx  SynthesisPanelV2.tsx
web-react/src/components/layout/: AppLayout.tsx  ChatHeader.tsx  ChatScreen.tsx  PhaseIndicator.tsx  ResizeHandle.tsx
web-react/src/components/modals/: AccountModal.tsx  AgentInstallModal.tsx  ApproveModal.tsx  LoginModal.tsx  ProfileManager.tsx  SaveSkillModal.tsx  SelfLearningModal.tsx  SessionModal.tsx  SettingsModal.tsx
web-react/src/components/nav/: AdminTab.tsx  CronTab.tsx  MemoryGraphTab.tsx  Navigator.tsx  ProjectsTab.tsx  (+3 more)
web-react/src/context/: AppContext.tsx  AuthContext.tsx  ThemeContext.tsx
web-react/src/hooks/: useFSAA.ts  useLocalStorage.ts  useResize.ts  useSSE.ts  useTheme.ts
web-react/src/lib/: api.ts  sse.ts  utils.ts
web-react/src/types/: api.ts  models.ts  sse.ts
web/static/: index.html
(+22 files in other folders)
