[project]
name = "aimodeljudge"
version = "1.5.0"
description = "AI-powered code analysis platform — multi-model judge with 4-phase SSE streaming, Telegram bot, PWA"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "fastapi==0.137.2",               # Web framework — MIT
    "uvicorn[standard]==0.49.0",      # ASGI server — BSD-3
    "starlette==1.3.1",               # HTTP framework (FastAPI dep) — BSD-3
    "python-multipart==0.0.32",       # File uploads (FastAPI dep) — Apache-2.0
    "sse-starlette==3.4.4",           # SSE streaming — BSD-3
    "passlib[bcrypt]==1.7.4",         # Password hashing — BSD-3
    "bcrypt==3.2.2",                  # Blowfish hashing (passlib dep) — Apache-2.0
    "cryptography==44.0.0",           # Secrets vault encryption (Fernet) — Apache-2.0/BSD-3
    "PyJWT[crypto]==2.13.0",         # JWT auth — access+refresh tokens (HS256) — MIT
    "python-dotenv==1.2.2",           # .env loading — BSD-3
    "httpx==0.28.1",                  # HTTP client — BSD-3
    "httpx-sse==0.4.3",              # SSE client for httpx — BSD-3
    "aiogram==3.29.0",               # Telegram Bot API — MIT
    "PyYAML==6.0.1",                  # YAML parsing — MIT
    "Jinja2==3.1.6",                  # Templating — BSD-3
    "pydantic==2.13.4",              # Data validation — MIT
    "pydantic-settings==2.14.1",     # Settings management — MIT
    "aiofiles==25.1.0",              # Async file I/O — Apache-2.0
    "Pillow==10.2.0",                # Image processing — HPND
    "websockets==16.0",              # WebSocket support — BSD-3
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",                 # Test runner — MIT
    "pytest-asyncio==0.25.0",        # Async test support — Apache-2.0
    "pip-audit==2.7.3",              # Vulnerability scanner — Apache-2.0
    "cyclonedx-py==0.6.0",           # SBOM generator — Apache-2.0
]

[tool.pip-audit]
# Ignore CVE-2024-XXXX if confirmed non-exploitable in our context
# ignore = ["PYSEC-2024-XXX"]

[tool.cyclonedx]
format = "json"
schema_version = "1.4"
